hphp/test/zend/good/ext/date/tests/009.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (substr(PHP_OS, 0, 3) == 'WIN') die('skip posix only test.');
if (!function_exists('strftime')) die("skip, strftime not available");
}
