hphp/test/zend/bad/ext/date/tests/009.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') die('skip posix only test.');
if (!function_exists('strftime')) die("skip, strftime not available");
?>